--- a/src/app/page/recargas/list-rec/list-rec.component.html
+++ b/src/app/page/recargas/list-rec/list-rec.component.html
@@ -1,3 +1,9 @@
-<p>
-  list-rec works!
-</p>
+<nb-card>
+  <nb-card-header>
+    últimas recargas
+  </nb-card-header>
+
+  <nb-card-body>
+    <ng2-smart-table [settings]="settings"></ng2-smart-table>
+  </nb-card-body>
+</nb-card>
