--- a/src/app/page/maquina/new-maq/new-maq.component.html
+++ b/src/app/page/maquina/new-maq/new-maq.component.html
@@ -1,3 +1,45 @@
-<p>
-  new-maq works!
-</p>
+<nb-card>
+<nb-card-header>Nueva Máquina</nb-card-header>
+  <nb-card-body><form>
+    <div class="form-group row">
+      <label for="descp" class="col-sm-2 col-form-label">Descripción</label>
+      <div class="col-sm-10">
+        <input type="text"  class="form-control" id="descp" value="">
+      </div>
+    </div>
+    <div class="form-group row">
+      <label for="tarf" class="col-sm-2 col-form-label">Tarifa</label>
+      <div class="col-sm-10 has-money-icon">
+        <input type="number" class="form-control" id="tarf" placeholder="0.0">
+      </div>
+    </div>
+
+    <div class="form-group row">
+      <label for="tipoCob" class="col-sm-2 col-form-label">Medida de cobro</label>
+      <div class="col-sm-10">
+        <select id="tipoCob" #selector class="form-control" (change)="cambiar(selector.value)" >
+          <option value=0>Números de Intentos</option>
+          <option value=1>Tiempo de juego</option>
+        </select>
+      </div>
+    </div>
+    <div #intentos class="form-group row {{showIntetntos}}">
+      <label for="tipoCob" class="col-sm-2 col-form-label">Número de intentos</label>
+      <div class="col-sm-10">
+        <input type="number" class="form-control"  >
+      </div>
+    </div>
+    <div #tiempo class="form-group row {{showTime}}">
+      <label for="tipoCob" class="col-sm-2 col-form-label">Tiempo de Juego</label>
+      <div class="col-sm-10">
+        <input type="number" class="form-control" >
+      </div>
+    </div>
+    <div class="form-group row">
+      <div class="col-sm-6"> <button class="btn btn-primary" >Guardar </button></div>
+
+    </div>
+  </form>
+  </nb-card-body>
+</nb-card>
+
