--- a/src/styles.css
+++ b/src/styles.css
@@ -2,3 +2,26 @@
 .main-container{
   border-top-right-radius: .5rem !important;
 }
+
+.hidden{
+  display: none;
+}
+
+.has-money-icon{
+  position: relative;
+}
+.has-money-icon .form-control{
+  padding-left: 3rem;
+}
+.has-money-icon::before{
+  content: '\f155';
+  font-family: 'FontAwesome';
+  font-size: 1.6rem;
+  position: absolute;
+  z-index: 100;
+  left: 2.5rem;
+  top: 0.7rem;
+}
+
+
+
