--- a/src/app/page/maquina/new-maq/new-maq.component.html
+++ b/src/app/page/maquina/new-maq/new-maq.component.html
@@ -1,14 +1,15 @@
 <nb-card>
 <nb-card-header>Nueva Máquina</nb-card-header>
-  <nb-card-body><form>
+  <nb-card-body>
+    <form (ngSubmit)="guardar()">
     <div class="form-group row">
-      <label for="descp" class="col-sm-2 col-form-label">Descripción</label>
+      <label for="descp" class="col-sm-2 col-form-label" [(ngModel)]="maquinaItem.description" >Descripción</label>
       <div class="col-sm-10">
         <input type="text"  class="form-control" id="descp" value="">
       </div>
     </div>
     <div class="form-group row">
-      <label for="tarf" class="col-sm-2 col-form-label">Tarifa</label>
+      <label for="tarf" class="col-sm-2 col-form-label" [(ngModel)]="maquinaItem.tarifa">Tarifa</label>
       <div class="col-sm-10 has-money-icon">
         <input type="number" class="form-control" id="tarf" placeholder="0.0">
       </div>
@@ -26,13 +27,13 @@
     <div #intentos class="form-group row {{showIntetntos}}">
       <label for="tipoCob" class="col-sm-2 col-form-label">Número de intentos</label>
       <div class="col-sm-10">
-        <input type="number" class="form-control"  >
+        <input type="number" class="form-control" [(ngModel)]="maquinaItem.intentos"  >
       </div>
     </div>
     <div #tiempo class="form-group row {{showTime}}">
       <label for="tipoCob" class="col-sm-2 col-form-label">Tiempo de Juego</label>
       <div class="col-sm-10">
-        <input type="number" class="form-control" >
+        <input type="number" class="form-control" [(ngModel)]="maquinaItem.tiempo" >
       </div>
     </div>
     <div class="form-group row">
