--- a/src/app/page/maquina/new-maq/new-maq.component.html
+++ b/src/app/page/maquina/new-maq/new-maq.component.html
@@ -1,17 +1,17 @@
 <nb-card>
 <nb-card-header>Nueva Máquina</nb-card-header>
   <nb-card-body>
-    <form (ngSubmit)="guardar()">
+    <form (ngSubmit)="guardar()"  >
     <div class="form-group row">
-      <label for="descp" class="col-sm-2 col-form-label" [(ngModel)]="maquinaItem.description" >Descripción</label>
+      <label for="descp" class="col-sm-2 col-form-label"  >Descripción</label>
       <div class="col-sm-10">
-        <input type="text"  class="form-control" id="descp" value="">
+        <input type="text"  class="form-control" id="descp" value="" name="description" [(ngModel)]="maquinaItem.description">
       </div>
     </div>
     <div class="form-group row">
-      <label for="tarf" class="col-sm-2 col-form-label" [(ngModel)]="maquinaItem.tarifa">Tarifa</label>
+      <label for="tarf" class="col-sm-2 col-form-label" >Tarifa</label>
       <div class="col-sm-10 has-money-icon">
-        <input type="number" class="form-control" id="tarf" placeholder="0.0">
+        <input type="number" class="form-control" id="tarf" name="tarifa" [(ngModel)]="maquinaItem.tarifa" placeholder="0.0">
       </div>
     </div>
 
@@ -27,13 +27,13 @@
     <div #intentos class="form-group row {{showIntetntos}}">
       <label for="tipoCob" class="col-sm-2 col-form-label">Número de intentos</label>
       <div class="col-sm-10">
-        <input type="number" class="form-control" [(ngModel)]="maquinaItem.intentos"  >
+        <input type="number" class="form-control" name="intentos" [(ngModel)]="maquinaItem.intentos"  >
       </div>
     </div>
     <div #tiempo class="form-group row {{showTime}}">
       <label for="tipoCob" class="col-sm-2 col-form-label">Tiempo de Juego</label>
       <div class="col-sm-10">
-        <input type="number" class="form-control" [(ngModel)]="maquinaItem.tiempo" >
+        <input type="number" class="form-control" name="tiempo" [(ngModel)]="maquinaItem.tiempo" >
       </div>
     </div>
     <div class="form-group row">
