--- a/src/app/page/cliente/new-cli/new-cli.component.html
+++ b/src/app/page/cliente/new-cli/new-cli.component.html
@@ -1,3 +1,45 @@
-<p>
-  new-cli works!
-</p>
+<nb-card>
+<nb-card-header>Nuevo Cliente</nb-card-header>
+  <nb-card-body>
+    <form (ngSubmit)="guardar()"  >
+    	<div class="row">
+    		<div class="col-md-1"></div>
+    		<div class="form-group col-md-4">
+		      <label for="cedula" class="col-sm-2 col-form-label"  >Cédula</label>
+		      <div class="col-sm-10">
+		        <input type="text"  class="form-control" id="cedula" value="" name="cedula" [(ngModel)]="cliente.cedula">
+		      </div>
+		    </div>
+		    <div class="col-md-2"></div>
+		    <div class="form-group col-md-4">
+		      <label for="birthday" class="col-sm-6 col-form-label" >Fecha Nacimiento</label>
+		      <div class="col-sm-10 ">
+		        <input type="date" class="form-control" id="birthday" name="birthday" [(ngModel)]="cliente.birthday">
+		      </div>
+		    </div>		
+		</div>
+		<div class="row">
+		    <div class="form-group col-md-6">
+		      <label for="nombre" class="col-sm-2 col-form-label" >Nombres</label>
+		      <div class="col-sm-10 ">
+		        <input type="text" class="form-control" id="nombre" name="nombre" [(ngModel)]="cliente.nombres">
+		      </div>
+		    </div>		
+		    <div class="form-group col-md-6">
+		      <label for="apellidos" class="col-sm-2 col-form-label" >Apellidos</label>
+		      <div class="col-sm-10 ">
+		        <input type="text" class="form-control" id="apellidos" name="apellidos" [(ngModel)]="cliente.apellidos">
+		      </div>
+		    </div>
+    	</div>
+    
+    
+    
+    <div class="form-group row">
+      <div class="col-sm-6"> <button class="btn btn-primary" >Guardar </button></div>
+
+    </div>
+  </form>
+  </nb-card-body>
+</nb-card>
+
