--- a/src/app/page/maquina/new-maq/new-maq.component.html
+++ b/src/app/page/maquina/new-maq/new-maq.component.html
@@ -1,5 +1,5 @@
 <nb-card>
-<nb-card-header>Nueva Máquina</nb-card-header>
+<nb-card-header>{{id=='nuevo'?'Nueva Máquina':'Editar Máquina'}}</nb-card-header>
   <nb-card-body>
     <form (ngSubmit)="guardar()"  >
     <div class="form-group row">
@@ -37,7 +37,16 @@
       </div>
     </div>
     <div class="form-group row">
-      <div class="col-sm-6"> <button class="btn btn-primary" >Guardar </button></div>
+
+      <label class="col-sm-2"></label>
+      <div class="col-sm-10">
+        <div class="btn-group btn-group-full-width" role="group">
+          <button type="button" class="btn btn-primary btn-group-icon btn-group-divider btn-fixed" (click)="regresar()">
+            <i class="fa fa-arrow-left"></i>
+          </button>
+          <button class="btn btn-primary" >{{id=='nuevo'?'Guardar':'Editar'}} </button>
+        </div>
+        </div>
 
     </div>
   </form>
