--- a/src/app/page/promociones/new-pro/new-pro.component.html
+++ b/src/app/page/promociones/new-pro/new-pro.component.html
@@ -1,3 +1,26 @@
-<p>
-  new-pro works!
-</p>
+<div class="row">
+  <div class="col-md-12 col-12">
+    <nb-card>
+      <nb-card-header>Nueva Promocion</nb-card-header>
+      <nb-card-body>
+        <div class="form-group row">
+          <label  class="col-sm-2 col-form-label">Nombre</label>
+          <div class="col-sm-10">
+            <input type="text" placeholder="Promoción Vacacional" class="form-control" maxlength="15"/>
+          </div>
+        </div>
+        <div class="form-group row">
+          <label  class="col-sm-2 col-form-label">Descripción</label>
+          <div class="col-sm-5">
+          	<textarea class="form-control" name="descripcion" rows="3"></textarea>
+          </div>
+          <div class="col-sm-35">
+          	<label  class="col-sm-2 col-form-label">Cantidad</label>
+            <input type="number" name="cantidad" placeholder="1" class="form-control"  min="1" />
+          </div>
+        </div>
+      </nb-card-body>
+    </nb-card>
+  </div>
+  
+</div>
