--- a/src/app/page/recargas/list-rec/list-rec.component.html
+++ b/src/app/page/recargas/list-rec/list-rec.component.html
@@ -4,6 +4,6 @@
   </nb-card-header>
 
   <nb-card-body>
-    <ng2-smart-table [settings]="settings"></ng2-smart-table>
+    <ng2-smart-table [settings]="settings" (create)="addMaqui()" ></ng2-smart-table>
   </nb-card-body>
 </nb-card>
