--- a/src/app/page/cliente/new-cli/new-cli.component.html
+++ b/src/app/page/cliente/new-cli/new-cli.component.html
@@ -18,6 +18,37 @@
             <input type="text" placeholder="Apellido" class="form-control" maxlength="50"/>
           </div>
         </div>
+        <div class="form-group row">
+          <label  class="col-sm-2 col-form-label">Fecha de Nacimiento</label>
+          <div class="col-sm-10">
+            <input type="date"  class="form-control" maxlength="15"/>
+          </div>
+        </div>
+        <hr>
+        <div class="form-group row">
+          <label  class="col-sm-2 col-form-label">Telefono</label>
+          <div class="col-sm-10">
+            <input type="text" placeholder="03 202 202" class="form-control"/>
+          </div>
+        </div>
+        <div class="form-group row">
+          <label  class="col-sm-2 col-form-label">E-mail</label>
+          <div class="col-sm-10">
+            <input type="text" placeholder="ejemplo@correo.com" class="form-control" />
+          </div>
+        </div>
+        <div class="form-group row">
+          <label  class="col-sm-2 col-form-label">Dirrección</label>
+          <div class="col-sm-10">
+            <textarea  class="form-control" rows="4"></textarea>
+          </div>
+        </div>
+        <div class="form-group row">
+          <label  class="col-sm-2 col-form-label"></label>
+          <div class="col-sm-10">
+            <button class="btn btn-primary">Guardar</button>
+          </div>
+        </div>
       </nb-card-body>
     </nb-card>
   </div>
@@ -25,6 +56,18 @@
     <nb-card>
       <nb-card-header><i class="fa fa-credit-card"></i> Informacion de la tarjeta</nb-card-header>
       <nb-card-body>
+          <div class="input-group ">
+            <input type="text" placeholder="ID" class="form-control"/>
+          </div>
+          <div class="input-group">
+            <input type="text" placeholder="Saldo" class="form-control">
+          </div>
+          <div class="input-group">
+            <input type="text" placeholder="Tipo de Tarjeta" class="form-control">
+          </div>
+          <div class="input-group">
+            <input type="text" placeholder="Fecha de vencimiento" class="form-control">
+          </div>
       </nb-card-body>
     </nb-card>
   </div>
