--- a/src/app/page/promociones/new-pro/new-pro.component.html
+++ b/src/app/page/promociones/new-pro/new-pro.component.html
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="col-md-12 col-12">
+  <div class="col-md-6 col-12">
     <nb-card>
       <nb-card-header>Nueva Promocion</nb-card-header>
       <nb-card-body>
@@ -11,16 +11,69 @@
         </div>
         <div class="form-group row">
           <label  class="col-sm-2 col-form-label">Descripción</label>
-          <div class="col-sm-5">
+          <div class="col-sm-10">
           	<textarea class="form-control" name="descripcion" rows="3"></textarea>
           </div>
-          <div class="col-sm-35">
-          	<label  class="col-sm-2 col-form-label">Cantidad</label>
+        </div>
+        <div class="form-group row">
+          <label  class="col-sm-2 col-form-label"></label>
+          <div class="col-sm-5">
+            <label  class="col-sm-2 col-form-label">Cantidad</label>
             <input type="number" name="cantidad" placeholder="1" class="form-control"  min="1" />
           </div>
+          <div class="col-sm-5">
+            <label  class="col-sm-2 col-form-label">Operaciones</label>
+            <select class="form-control">
+              <option>*</option>
+              <option>/</option>
+              <option>+</option>
+              <option>-</option>
+            </select>
+          </div>
         </div>
+        <div class="form-group row">
+          <label class=" col-form-label col-sm-2">Fecha</label>
+          <div class="col-sm-5">
+            <label  class="col-sm-2 col-form-label">Activación</label>
+            <input type="date" name="cantidad"  class="form-control"  min="1" />
+          </div>
+          <div class="col-sm-5">
+            <label  class="col-sm-2 col-form-label">Vencimiento</label>
+            <input type="date" name="cantidad" class="form-control"  min="1" />
+          </div>
+        </div>
+        <div class="form-group row">
+          <label class="col-form-label col-sm-2"></label>
+          <div class="col-sm-10">
+            <input type="checkbox" value="Es limitado" >
+          </div>
+        </div>
+        <div class="form-group row">
+          <label class="col-form-label col-sm-2"></label>
+          <div class="col-sm-10">
+          <button class="btn btn-primary">Guardar</button>
+          </div>
+        </div>
+
       </nb-card-body>
     </nb-card>
   </div>
-  
+  <div class="col-md-6 col-12">
+    <nb-card>
+      <nb-card-header>Horario de promocion</nb-card-header>
+      <nb-card-body>
+        <select multiple class="form-control">
+
+          <option>lunes</option>
+          <option>Martes</option>
+          <option>Miercoles</option>
+          <option>Jueves</option>
+          <option>Viernes</option>
+
+        </select>
+      </nb-card-body>
+      <nb-card-footer></nb-card-footer>
+    </nb-card>
+  </div>
+
 </div>
