--- a/src/app/page/recargas/new-rec/new-rec.component.html
+++ b/src/app/page/recargas/new-rec/new-rec.component.html
@@ -40,7 +40,7 @@
         </div>
       </nb-card-body>
       <nb-card-footer>
-        <button class="btn btn-primary">Guardar</button>
+        <button class="btn btn-primary">Recargar</button>
       </nb-card-footer>
     </nb-card>
 
