--- a/src/app/page/cliente/new-cli/new-cli.component.html
+++ b/src/app/page/cliente/new-cli/new-cli.component.html
@@ -1,76 +1,60 @@
 <div class="row">
   <div class="col-md-6 col-12">
     <nb-card>
-      <nb-card-header>Nuevo Cliente</nb-card-header>
+      <nb-card-header><i class="fa fa-user"></i> {{id=='nuevo'?'Nuevo Cliente':'Editar Cliente'}}</nb-card-header>
       <nb-card-body>
+        <form  >
         <div class="form-group row">
           <label  class="col-sm-2 col-form-label">Cédula</label>
           <div class="col-sm-10">
-            <input type="text" placeholder="cédula" class="form-control" maxlength="15"/>
+            <input type="text" placeholder="cédula" class="form-control" maxlength="15" name="cedula" [(ngModel)]="clienteItem.cedula"/>
           </div>
         </div>
         <div class="form-group row">
           <label  class="col-sm-2 col-form-label">Nombre del Usuario</label>
           <div class="col-sm-5">
-            <input type="text" placeholder="Nombre" class="form-control" maxlength="50"/>
+            <input type="text" placeholder="Nombre" class="form-control" maxlength="50" name="nombre" [(ngModel)]="clienteItem.nombre"/>
           </div>
           <div class="col-sm-5">
-            <input type="text" placeholder="Apellido" class="form-control" maxlength="50"/>
+            <input type="text" placeholder="Apellido" class="form-control" maxlength="50" name="apellido" [(ngModel)]="clienteItem.apellido"/>
           </div>
         </div>
         <div class="form-group row">
           <label  class="col-sm-2 col-form-label">Fecha de Nacimiento</label>
           <div class="col-sm-10">
-            <input type="date"  class="form-control" maxlength="15"/>
+            <input type="date"  class="form-control" maxlength="15" name="fecha_nacimiento" [(ngModel)]="clienteItem.fecha_nacimiento"/>
           </div>
         </div>
         <hr>
         <div class="form-group row">
           <label  class="col-sm-2 col-form-label">Telefono</label>
           <div class="col-sm-10">
-            <input type="text" placeholder="03 202 202" class="form-control"/>
+            <input type="text" placeholder="03 202 202" class="form-control" name="telefono" [(ngModel)]="clienteItem.telefono"/>
           </div>
         </div>
         <div class="form-group row">
           <label  class="col-sm-2 col-form-label">E-mail</label>
           <div class="col-sm-10">
-            <input type="text" placeholder="ejemplo@correo.com" class="form-control" />
+            <input type="text" placeholder="ejemplo@correo.com" class="form-control" name="email" [(ngModel)]="clienteItem.email" />
           </div>
         </div>
         <div class="form-group row">
           <label  class="col-sm-2 col-form-label">Dirrección</label>
           <div class="col-sm-10">
-            <textarea  class="form-control" rows="4"></textarea>
+            <textarea  class="form-control" rows="4" name="direccion" [(ngModel)]="clienteItem.direccion" ></textarea>
           </div>
         </div>
         <div class="form-group row">
           <label  class="col-sm-2 col-form-label"></label>
           <div class="col-sm-10">
-            <button class="btn btn-primary">Guardar</button>
+            <button class="btn btn-primary" (click)="guardar()">{{id=='nuevo'?'Guardar':'Editar'}}</button>
           </div>
         </div>
+        </form>
       </nb-card-body>
     </nb-card>
   </div>
-  <div class="col-md-6 col-12">
-    <nb-card>
-      <nb-card-header><i class="fa fa-credit-card"></i> Informacion de la tarjeta</nb-card-header>
-      <nb-card-body>
-          <div class="input-group ">
-            <input type="text" placeholder="ID" class="form-control"/>
-          </div>
-          <div class="input-group">
-            <input type="text" placeholder="Saldo" class="form-control">
-          </div>
-          <div class="input-group">
-            <input type="text" placeholder="Tipo de Tarjeta" class="form-control">
-          </div>
-          <div class="input-group">
-            <input type="text" placeholder="Fecha de vencimiento" class="form-control">
-          </div>
-      </nb-card-body>
-    </nb-card>
-  </div>
+
 </div>
 
 
