--- a/src/app/page/promociones/list-pro/list-pro.component.html
+++ b/src/app/page/promociones/list-pro/list-pro.component.html
@@ -4,6 +4,6 @@
   </nb-card-header>
 
   <nb-card-body>
-    <ng2-smart-table [settings]="settings" (create)="addMaqui()"></ng2-smart-table>
+    <ng2-smart-table [settings]="settings" [source]="datos" (edit)="editarMaq($event)" (create)="addMaqui()" (delete)="deleteMaqui($event)"></ng2-smart-table>
   </nb-card-body>
 </nb-card>
