--- a/src/app/page/recargas/new-rec/new-rec.component.html
+++ b/src/app/page/recargas/new-rec/new-rec.component.html
@@ -16,12 +16,8 @@
         </div>
         <div class="form-group">
           <label>Promocion</label>
-          <select class="form-control">
-            <option>3*1</option>
-            <option>2*1</option>
-            <option>viernes loco</option>
-            <option>Lunes Loco</option>
-            <option>martes super loco</option>
+          <select  class="form-control">
+            <option *ngFor="let promo of Promociones">{{promo.titulo}}</option>
           </select>
         </div>
         <div class="row full-name-inputs">
@@ -51,13 +47,18 @@
       <nb-card-header><i class="fa fa-credit-card" aria-hidden="true"></i>&nbsp;&nbsp; &nbsp;Informacion de la tarjeta</nb-card-header>
       <nb-card-body>
         <div class="input-group ">
-          <input type="text" placeholder="ID" class="form-control"/>
+          <input type="text" placeholder="ID" class="form-control" disabled/>
+        </div>
+        <div class="row full-name-inputs">
+          <div class="col-sm-6 input-group has-money-icon">
+            <input type="text" placeholder="Saldo" class="form-control" disabled/>
+          </div>
+          <div class="col-sm-6 input-group has-money-icon">
+            <input type="text" placeholder="Credito" class="form-control" disabled/>
+          </div>
         </div>
         <div class="input-group">
-          <input type="text" placeholder="Saldo" class="form-control">
-        </div>
-        <div class="input-group">
-          <input type="text" placeholder="Fecha de vencimiento" class="form-control">
+          <input type="text" placeholder="Fecha de vencimiento" class="form-control" disabled>
         </div>
       </nb-card-body>
     </nb-card>
@@ -78,34 +79,5 @@
         </div>
       </nb-card-body>
     </nb-card>
-    <nb-card>
-      <nb-card-body class="demo-rating">
-        <span class="rating-header">Rating</span>
-        <div>
-          <ngb-rating [(rate)]="starRate" max=5>
-            <ng-template let-fill="fill">
-              <span class="star fill" [class.filled]="fill === 100">
-                <i class="ion-android-star" *ngIf="fill === 100"></i>
-                <i class="ion-android-star-outline" *ngIf="fill !== 100"></i>
-              </span>
-            </ng-template>
-          </ngb-rating>
-          <span class="current-rate">{{ starRate }}</span>
-        </div>
-        <div>
-          <ngb-rating [(rate)]="heartRate" max=5>
-            <ng-template let-fill="fill">
-              <span class="star fill" [class.filled]="fill === 100">
-                <i class="ion-ios-heart" *ngIf="fill === 100"></i>
-                <i class="ion-ios-heart-outline" *ngIf="fill !== 100"></i>
-              </span>
-            </ng-template>
-          </ngb-rating>
-          <span class="current-rate">{{ heartRate }}</span>
-        </div>
-      </nb-card-body>
-    </nb-card>
-
-
-  </div>
+    </div>
 </div>
