--- a/src/app/page/promociones/new-pro/new-pro.component.html
+++ b/src/app/page/promociones/new-pro/new-pro.component.html
@@ -1,7 +1,7 @@
 <div class="row">
   <div class="col-md-9 col-12">
     <nb-card>
-      <nb-card-header>Nueva Promocion</nb-card-header>
+      <nb-card-header><i class="fa fa-percent"></i> {{id=='nuevo'?'Nueva Promcion':'Editar Promocion'}}</nb-card-header>
       <nb-card-body>
         <div class="form-group row">
           <label  class="col-sm-2 col-form-label">Titulo</label>
@@ -24,10 +24,11 @@
           <div class="col-sm-5">
             <label  class="col-sm-2 col-form-label">Operaciones</label>
             <select class="form-control" [(ngModel)]="promocionItem.operacion" name="operacion">
-              <option value="*">*</option>
-              <option value="/">/</option>
-              <option value="+">+</option>
-              <option value="-">-</option>
+              <option value="*">(*) multiplicacion</option>
+              <option value="/">(/) Division</option>
+              <option value="+">(+) Suma</option>
+              <option value="-">(-) Resta</option>
+              <option value="=">(=) Igual</option>
             </select>
           </div>
         </div>
@@ -52,9 +53,19 @@
           </div>
         </div>
         <div class="form-group row">
+          <label class="col-form-label col-sm-2">Promoción aplica a: </label>
+          <div class="col-sm-10">
+            <select class="form-control" name="userFk"
+                    [(ngModel)]="promocionItem.aplica_a">
+              <option value="recarga">Recargas de tarjetas</option>
+              <option value="consumo">Consumos de tarjetas</option>
+            </select>
+          </div>
+        </div>
+        <div class="form-group row">
           <label class="col-form-label col-sm-2"></label>
           <div class="col-sm-10">
-          <button class="btn btn-primary" (click)="guardar()">Guardar</button>
+          <button class="btn btn-primary" (click)="guardar()"> {{id=='nuevo'?'Guardar':'Editar'}}</button>
           </div>
         </div>
 
