--- a/src/app/page/tarjetas/new-tarj/new-tarj.component.html
+++ b/src/app/page/tarjetas/new-tarj/new-tarj.component.html
@@ -12,13 +12,10 @@
         </div>
         <div class="form-group row">
           <label  class="col-sm-2 col-form-label">Cliente</label>
-          <div class="col-sm-3 d-flex justify-content-center align-content-center">
-          <label class="form-control-label">{{targetaItem.userFk.nombre+' '+targetaItem.userFk.apellido}}</label>
-          </div>
-          <div class="col-sm-7">
+          <div class="col-sm-10">
             <select class="form-control" name="userFk"
                     [(ngModel)]="targetaItem.userFk">
-              <option *ngFor="let cli of listCliente" [ngValue]="cli">{{cli.cedula}} </option>
+              <option *ngFor="let cli of listCliente" [ngValue]="cli">{{cli.nombre}} {{cli.apellido}} </option>
             </select>
           </div>
         </div>
