--- a/src/app/component/menu/menu.component.html
+++ b/src/app/component/menu/menu.component.html
@@ -1,9 +1,8 @@
 <nb-layout>
   <nb-layout-header fixed>
     <div class="logo-containter">
-      <nb-action icon="nb-menu"></nb-action>
-      <a (click)="toggleSidebar()" href="#" class="navigation"><i class="fa fa-bars"></i></a>
-      <div class="logo" (click)="goToHome()">Panel de <span>Control</span></div>
+
+      <div class="logo"><a (click)="toggleSidebar()" href="#" class="navigation"><i class="fa fa-bars"></i></a> Panel de <span>Control</span></div>
     </div>
     </nb-layout-header>
 
