--- a/src/app/page/recargas/new-rec/new-rec.component.html
+++ b/src/app/page/recargas/new-rec/new-rec.component.html
@@ -1,7 +1,7 @@
 <div class="row">
   <div class="col-lg-6">
     <nb-card>
-      <nb-card-header><i class="fa fa-pencil-square-o"></i> Recarga</nb-card-header>
+      <nb-card-header><i class="fa fa-pencil-square-o"></i> Consumo</nb-card-header>
       <nb-card-body>
         <div class="row full-name-inputs ">
           <div class="col-sm-10 input-group has-card-icon">
