--- a/src/app/page/tarjetas/new-tarj/new-tarj.component.html
+++ b/src/app/page/tarjetas/new-tarj/new-tarj.component.html
@@ -7,7 +7,7 @@
         <div class="form-group row">
           <label  class="col-sm-2 col-form-label">ID-Card</label>
           <div class="col-sm-10">
-            <input type="text" placeholder="ssxaw1212323cds" class="form-control" name="description" [(ngModel)]="targetaItem.description" />
+            <input #idCard type="text" placeholder="ssxaw1212323cds" class="form-control" name="description" [(ngModel)]="targetaItem.description" />
           </div>
         </div>
         <div class="form-group row">
@@ -40,7 +40,7 @@
             <input type="number" placeholder="0.00" class="form-control" name="creditoa" [(ngModel)]="targetaItem.creditos" />
           </div>
         </div>
- 
+
         <div class="form-group row">
           <label  class="col-sm-2 col-form-label">Fecha</label>
           <div class="col-sm-5">
