--- a/src/app/page/recargas/new-rec/new-rec.component.html
+++ b/src/app/page/recargas/new-rec/new-rec.component.html
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="col-lg-6">
+  <div class="col-lg-6 col-md-9">
     <nb-card>
       <nb-card-header><i class="fa fa-pencil-square-o"></i> Consumo</nb-card-header>
       <nb-card-body>
@@ -60,7 +60,7 @@
 
   </div>
 
-  <div class="col-lg-6">
+  <div class="col-lg-6 col-md-3">
     <nb-card>
       <nb-card-header><i class="fa fa-credit-card" aria-hidden="true"></i>&nbsp;&nbsp; &nbsp;Informacion de la tarjeta Virtual</nb-card-header>
       <nb-card-body>
