--- a/src/app/page/cliente/new-cli/new-cli.component.html
+++ b/src/app/page/cliente/new-cli/new-cli.component.html
@@ -1,17 +1,20 @@
 <div class="row">
-  <div class="col-md-6 col-12">
+  <div class="col-md-6 col-sm-12 col-12">
     <nb-card>
       <nb-card-header><i class="fa fa-user"></i> {{id=='nuevo'?'Nuevo Cliente':'Editar Cliente'}}</nb-card-header>
       <nb-card-body>
-        <form  >
+        <form #formCli >
         <div class="form-group row">
-          <label  class="col-sm-2 col-form-label">Cédula</label>
+          <label  class="col-sm-2 col-form-label">Cédula (*)</label>
           <div class="col-sm-10">
-            <input type="text" placeholder="cédula" class="form-control" maxlength="15" name="cedula" [(ngModel)]="clienteItem.cedula"/>
+            <input #cedula="ngModel" required type="text" placeholder="cédula" [class]="cedula.valid || cedula.pristine?'form-control ':'form-control  form-control-danger'" maxlength="15" name="cedula" [(ngModel)]="clienteItem.cedula" required minlength="10"  />
+            <div [hidden]="cedula.valid || cedula.pristine" class="form-text error">
+              Campo no valido. Revise que no tenga minimo 10 digitos
+            </div>
           </div>
         </div>
         <div class="form-group row">
-          <label  class="col-sm-2 col-form-label">Nombre del Usuario</label>
+          <label  class="col-sm-2 col-form-label">Nombre del Usuario (*) </label>
           <div class="col-sm-5">
             <input type="text" placeholder="Nombre" class="form-control" maxlength="50" name="nombre" [(ngModel)]="clienteItem.nombre"/>
           </div>
@@ -35,7 +38,8 @@
         <div class="form-group row">
           <label  class="col-sm-2 col-form-label">E-mail</label>
           <div class="col-sm-10">
-            <input type="text" placeholder="ejemplo@correo.com" class="form-control" name="email" [(ngModel)]="clienteItem.email" />
+            <input #email="ngModel" type="text" placeholder="ejemplo@correo.com" [class]="email.valid || email.pristine?'form-control ':'form-control  form-control-danger'" name="email" [(ngModel)]="clienteItem.email" />
+
           </div>
         </div>
         <div class="form-group row">
@@ -47,14 +51,27 @@
         <div class="form-group row">
           <label  class="col-sm-2 col-form-label"></label>
           <div class="col-sm-10">
-            <button class="btn btn-primary" (click)="guardar()">{{id=='nuevo'?'Guardar':'Editar'}}</button>
+            <div class="btn-group btn-group-full-width" role="group">
+              <button type="button" class="btn btn-primary btn-group-icon btn-group-divider btn-fixed" (click)="regresar()">
+                <i class="fa fa-arrow-left"></i>
+              </button>
+              <button class="btn btn-primary" (click)="guardar()">{{id=='nuevo'?'Guardar':'Editar'}}</button>
+            </div>
           </div>
         </div>
         </form>
       </nb-card-body>
     </nb-card>
   </div>
-
+  <div class="col-md-6 col-sm-12 col-12">
+    <nb-card *ngIf="id!='nuevo'" >
+      <nb-card-header><i class="fa fa-credit-card">&nbsp;&nbsp;</i>Lista de tarjetas </nb-card-header>
+      <nb-card-body>
+        <ng2-smart-table [settings]="settings" [source]="datos"></ng2-smart-table>
+      </nb-card-body>
+    </nb-card>
+  </div>
 </div>
 
 
+<toaster-container [toasterconfig]="config"></toaster-container>
