--- a/src/app/page/maquina/new-maq/new-maq.component.html
+++ b/src/app/page/maquina/new-maq/new-maq.component.html
@@ -3,15 +3,15 @@
   <nb-card-body>
     <form (ngSubmit)="guardar()"  >
     <div class="form-group row">
-      <label for="descp" class="col-sm-2 col-form-label"  >Descripción</label>
+      <label for="descp" class="col-sm-2 col-form-label"  >Descripción (*)</label>
       <div class="col-sm-10">
         <input type="text" required  class="form-control" id="descp" value="" name="description" [(ngModel)]="maquinaItem.description">
       </div>
     </div>
     <div class="form-group row">
-      <label for="tarf" class="col-sm-2 col-form-label" >Tarifa</label>
+      <label for="tarf" class="col-sm-2 col-form-label" >Tarifa (*)</label>
       <div class="col-sm-10 has-money-icon">
-        <input type="number" class="form-control" id="tarf" name="tarifa" [(ngModel)]="maquinaItem.tarifa" placeholder="0.0">
+        <input type="number" class="form-control" id="tarf" name="tarifa" [(ngModel)]="maquinaItem.tarifa" placeholder="0.0" min="0">
       </div>
     </div>
 
@@ -25,9 +25,9 @@
       </div>
     </div>
     <div #intentos class="form-group row">
-      <label for="tipoCob" class="col-sm-2 col-form-label">Número de intentos</label>
+      <label for="tipoCob" class="col-sm-2 col-form-label">Número de intentos (*)</label>
       <div class="col-sm-10">
-        <input type="number" class="form-control" name="intentos" [(ngModel)]="maquinaItem.intentos"  >
+        <input type="number" class="form-control" name="intentos" [(ngModel)]="maquinaItem.intentos" min="1" >
       </div>
     </div>
     <div class="form-group row">
@@ -47,3 +47,4 @@
   </nb-card-body>
 </nb-card>
 
+<toaster-container [toasterconfig]="config"></toaster-container>
